k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: microservices-architecture
spec:
  selector:
    app: postgres
  ports:
  - port: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: microservices-architecture
spec:
  selector:
    app: backend
  ports:
  - port: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: microservices-architecture
spec:
  selector:
    app: frontend
  ports:
  - port: 80
